--- a/src/_includes/main/splash.html
+++ b/src/_includes/main/splash.html
@@ -2,13 +2,29 @@
 {% include main/topbar.html splash=true %}
 {%- endif -%}
 
+<style>
+    .image-bg-cover {
+        background: color-mix(in hsl, var(--bs-primary), #fff);
+    }
+
+    /*@formatter:off*/
+    #splash,
+    #topbar.topbar-splash #menu-toggler {
+        color: {{ page.splash.color | default: 'white' }};
+    }
+    /*@formatter:on*/
+</style>
+
+{%- if page.splash.image or page.splash.background -%}
 {% assign background_default = "url('" | append: relBase | append: page.splash.image | append: "')" %}
 {% assign background = page.splash.background | default: background_default %}
 {% assign background = background | preg_replace: '{{ relBase }}', relBase %}
+{% assign style = "background: " | append: background | append: ";" %}
+{%- endif -%}
 
 <div id="splash" class="position-relative">
     <div id="splash-image" class="position-sticky top-0">
-        <div class="image-bg-cover" style="background: {{ background }};"></div>
+        <div class="image-bg-cover" style="{{ style }}"></div>
     </div>
 
     {%- if page.splash.content != nil -%}
