--- a/src/_includes/part/shortcuts.html
+++ b/src/_includes/part/shortcuts.html
@@ -1,7 +1,15 @@
 {%- assign polygon = include.polygon | default: "8" -%}
-<!-- 5 | 6 | 8 -->
+<!-- circle | 4 | 5 | 6 | 8 -->
 
-{%- if polygon == "5" -%}
+{%- if polygon == "circle" -%}
+{%- assign class = "circle-clip" -%}
+{%- assign padding_x = "10%" -%}
+{%- assign padding_y = "10%" -%}
+{%- elsif polygon == "4" -%}
+{%- assign class = "square-clip" -%}
+{%- assign padding_x = "5%" -%}
+{%- assign padding_y = "5%" -%}
+{%- elsif polygon == "5" -%}
 {%- assign class = "pentagon-clip" -%}
 {%- assign padding_x = "10%" -%}
 {%- assign padding_y = "7%" -%}
@@ -15,41 +23,43 @@
 {%- assign padding_y = "10%" -%}
 {%- endif -%}
 
-<div class="{{ include.class }}">
-<div class="row g-4 justify-content-center my-4 w-100">
-    {%- assign color = 'primary' -%}
-    {%- assign first = true -%}
-    {%- assign sorted_pages = site.pages | sort: 'order' -%}
-    {%- for i_page in sorted_pages -%}
-    {%- if i_page.in_shortcuts == true -%}
-    {%- if color == 'primary' -%}
-    {%- assign color = 'secondary' -%}
-    {%- else -%}
-    {%- assign color = 'primary' -%}
-    {%- endif -%}
-    {%- if i_page.external_link -%}
-    {%- assign link = i_page.external_link -%}
-    {%- assign target = i_page.target | default: "_blank" -%}
-    {%- else -%}
-    {%- assign link = relBase | append: i_page.url -%}
-    {%- assign target = i_page.target | default: "_self" -%}
-    {%- endif -%}
-    <div class="col-6 col-md-4 col-xl-3 col-xxl-2">
-        <a href="{{ link }}" target="{{ target }}" class="btn btn-{{ color }} square rounded-0 {{ class }} overflow-hidden" style="padding: {{ padding_y }} {{ padding_x }};">
-            <div class="d-flex flex-column justify-content-center align-items-center {% if i_page.icon %}mb-3{% endif %}">
+<div class="{{ include.class }} shortcuts">
+    <div class="row g-4 justify-content-center my-4 w-100">
+        {%- assign color = 'primary' -%}
+        {%- assign first = true -%}
+        {%- assign sorted_pages = site.pages | sort: 'order' -%}
+        {%- for i_page in sorted_pages -%}
+        {%- if i_page.in_shortcuts == true -%}
+        {%- if color == 'primary' -%}
+        {%- assign color = 'secondary' -%}
+        {%- else -%}
+        {%- assign color = 'primary' -%}
+        {%- endif -%}
+        {%- if i_page.external_link -%}
+        {%- assign link = i_page.external_link -%}
+        {%- assign target = i_page.target | default: "_blank" -%}
+        {%- else -%}
+        {%- assign link = relBase | append: i_page.url -%}
+        {%- assign target = i_page.target | default: "_self" -%}
+        {%- endif -%}
+        <div class="col-6 col-md-3 col-xl-2">
+            <a href="{{ link }}" target="{{ target }}" class="link-quiet">
                 {% if i_page.icon %}
-                <div class="h-fix-lg biggest">
-                    <i class="fa-fw {{ i_page.icon }}"></i>
+                <div class="btn btn-{{ color }} square rounded-0 {{ class }} overflow-hidden w-fix-xs mx-auto" style="padding: {{ padding_y }} {{ padding_x }};">
+                    <div class="d-flex flex-column justify-content-center align-items-center">
+                        <div class="biggest">
+                            <i class="fa-fw {{ i_page.icon }}"></i>
+                        </div>
+                    </div>
                 </div>
                 {% endif %}
-                <div>
+                <div class="mt-3 link-{{ color }}">
                     {{ i_page.title_short | default: i_page.title }}
                 </div>
-            </div>
-        </a>
+            </a>
+        </div>
+        {%- assign first = false -%}
+        {%- endif -%}
+        {%- endfor -%}
     </div>
-    {%- assign first = false -%}
-    {%- endif -%}
-    {%- endfor -%}
-</div>
 </div>
