--- a/src/_includes/part/polygon.html
+++ b/src/_includes/part/polygon.html
@@ -1,4 +1,4 @@
-{% assign type = include.type | default: "8" %}
+{% assign type = include.type | default: const.default_polygon %}
 <!-- circle | 4 | 5 | 6 | 8 -->
 
 {% assign col1 = include.color1 | default: "primary" %}
