--- a/src/assets/website.less
+++ b/src/assets/website.less
@@ -4,6 +4,7 @@
 
 @import (less,reference) url("bootstrap/bootstrap-individual.css");
 
+@import url("less/code.less");
 @import url("less/general.less");
 @import url("less/svg-color.less");
 @import url("less/splash.less");
