--- a/src/_includes/main/footer.html
+++ b/src/_includes/main/footer.html
@@ -22,9 +22,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md">
-                    {{ const.cmldt }}
-                    <br>
-                    {{ const.ubt }}
+                    {{ const.institution }}
                     <br>
                     {{ const.address }}
                 </div>
