--- a/src/_includes/main/splash.html
+++ b/src/_includes/main/splash.html
@@ -38,7 +38,7 @@
     {%- assign splash_inclusion = "" -%}
     {%- endif -%}
     {%- assign spl_content = splash_inclusion | pre_markdown | markdownify | replace_post -%}
-    {% include main/splash-page.html content=spl_content overlay=splash.overlay scroll=splash.scroll content_raw=splash_inclusion data=splash.data index=forloop.index index0=forloop.index0 %}
+    {% include main/splash-page.html content=spl_content overlay=splash.overlay overlay_background=splash.overlay_background scroll=splash.scroll content_raw=splash_inclusion data=splash.data index=forloop.index index0=forloop.index0 %}
     {%- endfor -%}
     {%- endif -%}
 
