--- a/src/_includes/part/shortcuts.html
+++ b/src/_includes/part/shortcuts.html
@@ -25,16 +25,11 @@
 
 <div class="{{ include.class }} shortcuts">
     <div class="row g-4 justify-content-center my-4 w-100">
-        {%- assign color = 'primary' -%}
+        {%- assign color = include.color | default: 'primary' -%}
         {%- assign first = true -%}
         {%- assign sorted_pages = site.pages | sort: 'order' -%}
         {%- for i_page in sorted_pages -%}
         {%- if i_page.in_shortcuts == true -%}
-        {%- if color == 'primary' -%}
-        {%- assign color = 'secondary' -%}
-        {%- else -%}
-        {%- assign color = 'primary' -%}
-        {%- endif -%}
         {%- if i_page.external_link -%}
         {%- assign link = i_page.external_link -%}
         {%- assign target = i_page.target | default: "_blank" -%}
