--- a/src/_includes/sections/accordion.html
+++ b/src/_includes/sections/accordion.html
@@ -119,7 +119,7 @@
                 </button>
             </div>
             <div id="accordion-{{ include.index0 }}-{{ forloop.index0 }}" class="accordion-collapse collapse {% if forloop.index0==open %}show{% else %}{% endif %}" data-bs-parent="#accordion-{{ include.index0 }}">
-                <div class="px-2 pb-5 pt-3 mb-5">
+                <div class="pb-5 pt-4 mb-5">
                     {%- if body != nil -%}
                     {{ body | pre_markdown | markdownify | replace_post }}
                     {%- endif -%}
