--- a/src/assets/website.css
+++ b/src/assets/website.css
@@ -57808,6 +57808,14 @@ footer {
     column-break-inside: avoid;
     break-inside: avoid;
   }
+  .container,
+  .container-xxl,
+  .container-xl,
+  .container-lg,
+  .container-md,
+  .container-sm {
+    max-width: unset !important;
+  }
 }
 .highlight table td {
   padding: 5px;
@@ -58001,7 +58009,7 @@ footer {
   text-align: right;
   font-size: 80%;
   font-size: 0.875em;
-  margin-top: -5px;
+  margin-top: -2px;
   margin-bottom: -2px;
 }
 .language-js .code-highlighting:before,
