add possibility to mark entries active

--- a/src/_includes/main/topbar.html
+++ b/src/_includes/main/topbar.html
@@ -14,11 +14,12 @@
                     {%- assign sorted_pages = site.pages | sort: 'order' -%}
                     {%- assign n_topbar = 0 -%}
                     {%- for i_page in sorted_pages -%}
+                    {% assign id = i_page.url | split: '/' | last %}
                     {%- if i_page.in_menu_topbar == true -%}
                     {%- assign n_topbar = n_topbar | add: 1 -%}
                     <li class="nav-item d-none d-lg-block">
                         <a href="{{ relBase }}{{ i_page.url }}"
-                           class="nav-link {% if page.url == i_page.url %}active{% endif %}">
+                           class="nav-link {% if page.url == i_page.url or (include.active and include.active == id) %}active{% endif %}">
                             <i class="fa-fw {{ i_page.icon }}">{% if i_page.icon == '' %}&nbsp;{% endif %}</i>
                             {{ i_page.menu_title | default: i_page.header | default: i_page.title_short | default: i_page.title }}
                         </a>
