--- a/src/_includes/main/menu.html
+++ b/src/_includes/main/menu.html
@@ -11,6 +11,8 @@
         <div class="list-group list-group-flush mx-n3">
             {%- assign sorted_pages = site.pages | sort: 'order' -%}
             {%- for i_page in sorted_pages -%}
+            {% assign id = i_page.url | split: '/' | last %}
+
             {%- if i_page.in_menu_popup == true and i_page.parent == nil -%}
             {%- if i_page.external_link -%}
             {%- assign link = i_page.external_link -%}
@@ -19,7 +21,7 @@
             {%- assign link = relBase | append: i_page.url -%}
             {%- assign target = i_page.target | default: "_self" -%}
             {%- endif -%}
-            <a href="{{ link }}" target="{{ target }}" class="list-group-item list-group-item-action px-3 py-1 border-0 {% if page.url == i_page.url %}active{% endif %}">
+            <a href="{{ link }}" target="{{ target }}" class="list-group-item list-group-item-action px-3 py-1 border-0 {% if page.url == i_page.url or (include.active and include.active == id) %}active{% endif %}">
                 <div class="d-flex align-items-center">
                     <div>{{ i_page.menu_title | default: i_page.header | default: i_page.title }}</div>
                     {%- if target == "_blank" -%}
@@ -27,9 +29,9 @@
                     {%- endif -%}
                 </div>
             </a>
-            {% assign id = i_page.url | split: '/' | last %}
 
             {%- for j_page in sorted_pages -%}
+            {% assign subid = j_page.url | split: '/' | last %}
             {%- if j_page.in_menu_popup == true and j_page.parent != nil and j_page.parent == id -%}
             {%- if j_page.external_link -%}
             {%- assign link = j_page.external_link -%}
@@ -38,7 +40,7 @@
             {%- assign link = relBase | append: j_page.url -%}
             {%- assign target = j_page.target | default: "_self" -%}
             {%- endif -%}
-            <a href="{{ link }}" target="{{ target }}" class="list-group-item list-group-item-action px-3 py-1 border-0 {% if page.url == j_page.url %}active{% endif %}">
+            <a href="{{ link }}" target="{{ target }}" class="list-group-item list-group-item-action px-3 py-1 border-0 {% if page.url == j_page.url or (include.active and include.active == subid) %}active{% endif %}">
                 <div class="d-flex align-items-center">
                     <div class="ps-3">{{ j_page.menu_title | default: j_page.header | default: j_page.title }}</div>
                     {%- if target == "_blank" -%}
