--- a/src/assets/less/_vars.less
+++ b/src/assets/less/_vars.less
@@ -11,7 +11,7 @@
 @threshold_overlay: 65%;
 
 @color_primary: #10427C;
-@color_secondary: #AFDCF0; // mix(#fdfdfd, @color_primary, 85%);
+@color_secondary: #0085a1; // #AFDCF0; // mix(#fdfdfd, @color_primary, 85%);
 @color_tertiary: #ADFCF0; // mix(@color_primary, #fff, 10%);
 
 @color_outer: #F5F5F5; // mix(@color_primary, #dcc4c4, 20%); // @color_secondary;
