--- a/src/assets/less/_vars.less
+++ b/src/assets/less/_vars.less
@@ -11,8 +11,8 @@
 @threshold_overlay: 65%;
 
 @color_primary: #10427C;
-@color_secondary: #0085a1; // #AFDCF0; // mix(#fdfdfd, @color_primary, 85%);
-@color_tertiary: #ADFCF0; // mix(@color_primary, #fff, 10%);
+@color_secondary: #0085a1; // mix(#fdfdfd, @color_primary, 85%);
+@color_tertiary: mix(@color_primary, @color_secondary); // #ADFCF0; // mix(@color_primary, #fff, 10%);
 
 @color_outer: #F5F5F5; // mix(@color_primary, #dcc4c4, 20%); // @color_secondary;
 @color_outer_light: mix(@color_outer, #fff, @threshold_light);
