improve id recognizing

--- a/src/_includes/main/menu.html
+++ b/src/_includes/main/menu.html
@@ -12,6 +12,11 @@
             {%- assign sorted_pages = site.pages | sort: 'order' -%}
             {%- for i_page in sorted_pages -%}
             {% assign id = i_page.url | split: '/' | last %}
+            {%- if id == "index.html" -%}
+            {%- assign id = i_page.url | split: '/' -%}
+            {%- assign tmp = id.size | minus: 2 -%}
+            {%- assign id = id[tmp] -%}
+            {%- endif -%}
 
             {%- if i_page.in_menu_popup == true and i_page.parent == nil -%}
             {%- if i_page.external_link -%}
